# args-kata-cpp

./: CMakeLists.txt  README.md
doc/: CommandLineParser.puml  argparser.puml  parsing.puml
src/: ArgParser.cpp  ArgParser.h  ArgsParser.cpp  ArgsParser.h  CommandLineParser.cpp  CommandLineParser.h  GenericType.h  GenericValue.cpp  GenericValue.h  InputSplitter.cpp  InputSplitter.h  OptionSet.cpp  OptionSet.h  Parameter.cpp  Parameter.h  Schema.cpp  Schema.h  Splitter.cpp  Splitter.h
test/: acceptance.test.cpp  argparser.test.cpp  args.test.cpp  argsparser.test.cpp  cli.test.cpp  genericvalue.test.cpp  optionset.test.cpp  optionset.test.cpp.cpp  splitter.test.cpp
